# tddnnf

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CREDITS  LICENSE  README.md  pyproject.toml
examples/: abstr.py  text.py  tred.py
tddnnf/: install_bin.py
tddnnf/builders/: extended.py  reduced.py
tddnnf/compilers/: cudd.py  d4.py  pysdd.py
tddnnf/core/: abstraction.py  containers.py  interfaces.py  pysmt_utils.py  stats_collector.py
tddnnf/normalization/: normalizer.py
tddnnf/queries/: bdd_engine.py  d4_engine.py  sdd_engine.py
tests/: _base_compiler_test.py  _base_engine_test.py  conftest.py  formula_bank.py  test_abstraction.py  test_bdd_engine.py  test_cudd.py  test_d4.py  test_d4_engine.py  test_metrics.py  test_normalizer.py  test_pysdd.py  test_sdd_engine.py
