[project]
name = "tddnnf"
version = "0.1.0"
description = "A Python framework for Knowledge Compilation Modulo Theories"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Gabriele Masina" }]
requires-python = ">=3.12"
dependencies = ["pysmt>=0.9.7.dev431", "pysdd>=1.0.6", "dd", "ddnnife>=0.1.0"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.1", "basedpyright", "pre-commit>=3.0"]

[tool.hatch.build.targets.wheel]
packages = ["tddnnf"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"
include = ["tddnnf"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
